Added styles for sean-button

--- a/packages/sean-button/src/less/style.less
+++ b/packages/sean-button/src/less/style.less
@@ -1,7 +1,14 @@
 body {
     background: yellow;
     
-    span {
+    span.blue {
     	background: #62C4F3;
+    }
+
+    .sean-button {
+    	border: 1px dashed;
+    	border-radius: 5px;
+    	padding: 5px;
+    	border-color: red;
     }
 }
