Added joshable-header functionality

--- a/packages/joschable-header/src/style.less
+++ b/packages/joschable-header/src/style.less
@@ -1,14 +1,8 @@
-body {
-    background: yellow;
-    
-    span.blue {
-    	background: #62C4F3;
-    }
 
-    .sean-button {
-    	border: 1px dashed;
-    	border-radius: 5px;
-    	padding: 5px;
-    	border-color: red;
-    }
+.joschable-header {
+	border: 1px solid;
+	border-radius: 5px;
+	padding: 5px;
+	border-color: blue;
 }
+
