--- a/packages/joshable-content/src/style.less
+++ b/packages/joshable-content/src/style.less
@@ -1,8 +1,7 @@
 .joshable-content {
-	border: 4px solid;
+	border: 4px solid green;
 	border-radius: 5px;
 	padding: 5px;
-	border-color: green;
 	width: 400px;
 }
 
