--- a/packages/treyflipped-button/src/index.less
+++ b/packages/treyflipped-button/src/index.less
@@ -3,4 +3,8 @@
   color: white;
   font-size: 20px;
   padding: 10px;
+  width: 200px;
+  display: inline-block;
+  margin: 5px;
+  margin-top: 100px;
 }
