--- a/packages/ak-avatar/demo/index.ejs
+++ b/packages/ak-avatar/demo/index.ejs
@@ -7,6 +7,8 @@
     <body>
       test
       <br>
+      <ak-avatar src="https://design.atlassian.com/images/avatars/avatar-96.png" size="xxlarge" alt="Get big"></ak-avatar>
+      <br>
       <ak-avatar src="https://design.atlassian.com/images/avatars/avatar-96.png"></ak-avatar>
     </body>
 </html>
