--- a/packages/ak-shared-styles/src/colors.less
+++ b/packages/ak-shared-styles/src/colors.less
@@ -1,26 +1,26 @@
  /** white / black / grey colours */
-@aui-color-white: #fff;
-@aui-color-black: #000;
-@aui-color-blue: #205081;
-@aui-color-bright-blue-1: #3572b0;
-@aui-color-green: #14892c;
-@aui-color-yellow: #f6c342;
-@aui-color-red: #d04437;
-@aui-color-charcoal: #333;
-@aui-color-medium-gray: #707070;
-@aui-color-light-gray: #f5f5f5;
-@aui-color-gray: #999;
-@aui-color-ash-gray: #ccc;
-@aui-color-silver: #e9e9e9;
+@ak-color-white: #fff;
+@ak-color-black: #000;
+@ak-color-blue: #205081;
+@ak-color-bright-blue-1: #3572b0;
+@ak-color-green: #14892c;
+@ak-color-yellow: #f6c342;
+@ak-color-red: #d04437;
+@ak-color-charcoal: #333;
+@ak-color-medium-gray: #707070;
+@ak-color-light-gray: #f5f5f5;
+@ak-color-gray: #999;
+@ak-color-ash-gray: #ccc;
+@ak-color-silver: #e9e9e9;
 
 /** colours */
-@aui-color-brown: #815b3a;
-@aui-color-orange: #f79232;
-@aui-color-bright-blue-2: #59afe1;
-@aui-color-slate: #4a6785;
-@aui-color-cool-blue: #84bbc6;
-@aui-color-lime-green: #8eb021;
-@aui-color-dark-brown: #594300;
+@ak-color-brown: #815b3a;
+@ak-color-orange: #f79232;
+@ak-color-bright-blue-2: #59afe1;
+@ak-color-slate: #4a6785;
+@ak-color-cool-blue: #84bbc6;
+@ak-color-lime-green: #8eb021;
+@ak-color-dark-brown: #594300;
 
 /** link visited */
-@aui-color-violet: #654982;
+@ak-color-violet: #654982;
