--- a/packages/ak-inline-dialog/src/host.less
+++ b/packages/ak-inline-dialog/src/host.less
@@ -1,6 +1,9 @@
-@import 'shared.less';
+@import 'shared-variables.less';
 
 ak-inline-dialog {
+  display:none;
 
-
+  &[open] {
+    display:block;
+  }
 }
