--- a/packages/ak-inline-dialog/src/shadow.less
+++ b/packages/ak-inline-dialog/src/shadow.less
@@ -1,3 +1,8 @@
-@import 'shared.less';
+@import 'shared-variables.less';
 
-
+.inlineDialogContainer {
+  background:#fff;
+  border:1px solid #f0f0f0;
+  border-radius:5px;
+  box-shadow: 0 0 10px 10px #ddd;
+}
