--- a/packages/ak-inline-dialog/src/shared-variables.less
+++ b/packages/ak-inline-dialog/src/shared-variables.less
@@ -2,4 +2,8 @@
 
 @import '../node_modules/ak-shared-styles/src/colors.less';
 
-
+@ak-panel-bg-color: #fff;
+@ak-inline-dialog-border-color: @ak-color-ash-gray;
+@ak-inline-dialog-border-radius: 3px;
+@ak-inline-dialog-box-shadow:0 3px 6px rgba(0, 0, 0, 0.2);
+@ak-inline-dialog-content-padding:20px;
