--- a/packages/ak-util-component-template/src/host.less
+++ b/packages/ak-util-component-template/src/host.less
@@ -1,6 +1,6 @@
 /* ak-util-component-template - Styles in here will be inserted into the
    HEAD and are not able to pierce the shadow DOM boundary */
-@import 'shared.less';
+@import 'shared-variables.less';
 
 _COMPONENT_TEMPLATE {
   display: inline-block;
