--- a/jsdoc/jsdoc-templ/tmpl/layout.tmpl
+++ b/jsdoc/jsdoc-templ/tmpl/layout.tmpl
@@ -9,6 +9,9 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <script src="../packages/ak-pony-button/dist/bundle.js"></script>
+
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
     <link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
 </head>
