docs: Consolidate JSDoc output into jsdoc/out/ dir

--- a/jsdoc/jsdoc-templ/tmpl/layout.tmpl
+++ b/jsdoc/jsdoc-templ/tmpl/layout.tmpl
@@ -10,7 +10,7 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <script src="../jsdoc/jsdoc-out/index.js"></script>
+    <script src="scripts/index.js"></script>
 
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
     <link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
