--- a/packages/ak-inline-dialog/src/host.less
+++ b/packages/ak-inline-dialog/src/host.less
@@ -1,9 +1,11 @@
 @import 'shared-variables.less';
 
-ak-inline-dialog {
+.ak-inline-dialog {
+  border:1px solid red;
   display:none;
 
   &[open] {
     display:block;
   }
 }
+
