feat: Tether for layer
affects: ak-inline-dialog, ak-layer, akutil-common

--- a/packages/ak-inline-dialog/demo/index.ejs
+++ b/packages/ak-inline-dialog/demo/index.ejs
@@ -5,13 +5,13 @@
       <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-      <div style="width:300px; margin:500px auto 0 auto; border:1px solid red; height:300px;" id="target">
+      <div style="width:300px; margin:100px auto 0 auto; border:1px solid red; height:300px; position:relative;" id="target">
         test
         <br>
         <button id="button">Super button</button>
         <br/>
 
-        <ak-inline-dialog>test inline dialog</ak-inline-dialog>
+        <ak-inline-dialog>test inline dialog2</ak-inline-dialog>
 
         <script>
           var dialog = document.querySelector("ak-inline-dialog");
