fix: flashing content in demo
affects: ak-inline-dialog

--- a/packages/ak-inline-dialog/demo/index.ejs
+++ b/packages/ak-inline-dialog/demo/index.ejs
@@ -10,7 +10,11 @@
         <br>
         <button id="button">Super button</button>
         <br/>
-
+        <style>
+          ak-inline-dialog {
+            display:none;
+          }
+        </style>
         <ak-inline-dialog>test inline dialog2</ak-inline-dialog>
 
         <script>
