--- a/packages/ak-inline-dialog/demo/index.ejs
+++ b/packages/ak-inline-dialog/demo/index.ejs
@@ -5,7 +5,7 @@
       <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-      <div style="width:300px; margin:100px auto 0 auto; border:1px solid red; height:300px; position:relative;" id="target">
+      <div style="width:300px; margin:100px auto 0 auto; border:1px solid red; float:right;height:300px;" id="target">
         test
         <br>
         <button id="button">Super button</button>
