--- a/packages/ak-inline-dialog/src/shadow.less
+++ b/packages/ak-inline-dialog/src/shadow.less
@@ -6,6 +6,12 @@
   border-radius: @ak-inline-dialog-border-radius;
   box-shadow: @ak-inline-dialog-box-shadow;
   padding: @ak-inline-dialog-content-padding;
+}
 
-  overflow: hidden;
+.animateContainer {
+  overflow:hidden;
+}
+
+.animateContainer2 {
+  opacity:0;
 }
