--- a/packages/ak-inline-dialog/demo/index.ejs
+++ b/packages/ak-inline-dialog/demo/index.ejs
@@ -21,7 +21,7 @@
         <script>
           var dialog = document.querySelector("ak-inline-dialog");
           dialog.target = '#target';
-          dialog.position = 'left middle';
+          dialog.position = 'right top';
           //dialog.open = true;
 
           var button = document.querySelector('#button');
