test(cucumber): WIP

--- a/packages/akutil-component-template/src/host.less
+++ b/packages/akutil-component-template/src/host.less
@@ -1,5 +1,6 @@
-/* akutil-component-template - Styles in here will be inserted into the
-   HEAD and are not able to pierce the shadow DOM boundary */
+/* akutil-component-template */
+// Styles in here will be inserted into the HEAD and are not able to pierce the shadow DOM boundary
+
 @import 'shared-variables.less';
 
 akutil-component-template {
