--- a/packages/akutil-component-template/src/shared-variables.less
+++ b/packages/akutil-component-template/src/shared-variables.less
@@ -1,6 +1,5 @@
-/* For styles that are shared between shadow and host (Variable definitions ONLY) */
+// For styles that are shared between shadow and host (variable definitions ONLY)
 
 @import '../node_modules/akutil-shared-styles/src/colors.less';
 
 @ak-example-variable: 128px;
-
