--- a/packages/ak-inline-dialog/demo/index.ejs
+++ b/packages/ak-inline-dialog/demo/index.ejs
@@ -19,7 +19,15 @@
         <ak-inline-dialog>test inline dialog2</ak-inline-dialog>
 
         <script>
+          var dialog = document.querySelector("ak-inline-dialog");
+          dialog.target = '#target';
+          dialog.position = 'right top';
+          //dialog.open = true;
 
+          var button = document.querySelector('#button');
+          button.addEventListener('click', function () {
+            dialog.open = !dialog.open;
+          })
         </script>
       </div>
     </body>
