chore: Add editor-* set of packages.

--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -24,3 +24,10 @@
 
 /** link visited */
 @ak-color-violet: #654982;
+
+/** editor **/
+@editor-inactive-foreground: #42526E;
+@editor-focus: #0091EA;
+@editor-subtle-accent: #DEE1E6;
+@editor-active-background: #42526E;
+@editor-active-foreground: white;
