fix(style): Fixed up shadow style example
affects: akutil-component-template

--- a/packages/akutil-component-template/src/shadow.less
+++ b/packages/akutil-component-template/src/shadow.less
@@ -1,3 +1,7 @@
 // These styles will be inserted into a style tag inside
 // the shadow dom of each instance of the component
 @import 'shared-variables.less';
+
+.my-class-name {
+  color: blue;
+}
