test: fix width/height for WC

--- a/packages/akutil-component-template/stories/host.less
+++ b/packages/akutil-component-template/stories/host.less
@@ -1,7 +1,7 @@
 /* akutil-component-template */
 // Styles in here will be inserted into the HEAD and are not able to pierce the shadow DOM boundary
 
-@import 'shared-variables.less';
+@import '../src/shared-variables.less';
 
 .akutil-component-template {
   display: inline-block;
