--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -1,10 +1,31 @@
 @import 'shared-variables.less';
 
-img {
+.img {
   border-radius: 100%;
   border: 1px solid red;
   height: 100%;
   margin: 0 auto;
   width: 100%;
   vertical-align: bottom;
+
+  &.xsmall {
+    height: @ak-avatar-size-xsmall;
+    width: @ak-avatar-size-xsmall;
+  }
+  &.small {
+    height: @ak-avatar-size-small;
+    width: @ak-avatar-size-small;
+  }
+  &.medium {
+    height: @ak-avatar-size-medium;
+    width: @ak-avatar-size-medium;
+  }
+  &.large {
+    height: @ak-avatar-size-large;
+    width: @ak-avatar-size-large;
+  }
+  &.xlarge {
+    height: @ak-avatar-size-xlarge;
+    width: @ak-avatar-size-xlarge;
+  }
 }
