--- a/packages/akutil-component-template/src/host.less
+++ b/packages/akutil-component-template/src/host.less
@@ -1,13 +1,20 @@
-// Only do element selectors here (e.g. whatever is exposed in index.register.js)
+// You can use element selectors here (e.g. whatever is exposed in index.register.js)
+// to style your web component light DOM.
+
 // Anything in here leaks to the rest of the page and nothing in here can affect things within
-// the shadow part of the component
+// the shadow part of the component.
 
 @import 'shared-variables.less';
 
-ak-avatar {
+// we define a class here in order to re-use it in the storybook
+// (because in storybook the component name is randomly generated)
+.ak-avatar {
   display: inline-block;
 
   &:not([defined]) {
     display: none;
   }
+}
+ak-avatar {
+  .ak-avatar;
 }
