refactor: fix class name

--- a/packages/akutil-component-template/src/host.less
+++ b/packages/akutil-component-template/src/host.less
@@ -8,8 +8,8 @@
 
 // we define a class here in order to re-use it in the storybook
 // (because in storybook the component name is randomly generated)
-.ak-avatar,
-ak-avatar {
+.akutil-component-template,
+akutil-component-template {
   display: inline-block;
 
   &:not([defined]) {
