docs: Simplify templates required for events index
affects: ak-pony-button

--- a/docs/partials/member-index/member-index-list.hbs
+++ b/docs/partials/member-index/member-index-list.hbs
@@ -1,10 +1,6 @@
-{{#if (isEvent)}}
-{{hasEvents @root true~}}
-{{>index-indent}}
-{{else~}}
+{{#unless (isEvent)}}
 {{>index-indent}}* {{>sig-link-parent}}
-{{/if}}
-
+{{/unless}}
 {{#indexChildren ~}}
 {{>member-index-list~}}
 {{/indexChildren}}
