docs: Only print Events if any exist
affects: ak-avatar

--- a/docs/partials/member-index/member-index-list.hbs
+++ b/docs/partials/member-index/member-index-list.hbs
@@ -1,6 +1,8 @@
-{{#unless (isEvent)}}
+{{#if (isEvent)}}
+{{hasEvents @root true~}}
+{{else}}
 {{>index-indent}}* {{>sig-link-parent}}
-{{/unless}}
+{{/if}}
 {{#indexChildren ~}}
 {{>member-index-list~}}
 {{/indexChildren}}
