--- a/docs/partials/member-index/events-index.hbs
+++ b/docs/partials/member-index/events-index.hbs
@@ -1,3 +1,4 @@
+{{#if @root.hasEvents}}
 * Events
 
 {{setLevel this 0~}}
@@ -12,6 +13,7 @@
 
 {{>member-index-events}}
 
+{{/if~}}
 {{/if~}}
 {{/if~}}
 
