refactor: fix host file & split up multi-components

--- a/packages/ak-inline-dialog/src/host.less
+++ b/packages/ak-inline-dialog/src/host.less
@@ -1,6 +1,7 @@
 @import 'shared-variables.less';
 
-.ak-inline-dialog {
+.ak-inline-dialog, // for testing
+ak-inline-dialog {
   display:none;
 
   &[open=true] {
@@ -8,7 +9,7 @@
   }
 }
 
-ak-animmytest {
+ak-animtest {
   &[defined] {
     display: block;
   }
