--- a/docs/overrides/partials/member-index/member-index-list.hbs
+++ b/docs/overrides/partials/member-index/member-index-list.hbs
@@ -1,7 +1,15 @@
 {{#if (isEvent)}}
 {{hasEvents @root true~}}
 {{else}}
+{{#if (equal kind "function")}}
+{{hasMethods @root true~}}
+{{else}}
+{{#if (equal kind "member")}}
+{{hasProps @root true~}}
+{{else}}
 {{>index-indent}}* {{>sig-link-parent}}
+{{/if}}
+{{/if}}
 {{/if}}
 {{#indexChildren ~}}
 {{>member-index-list~}}
