fix(sizes): there are only 5 sizes
affects: ak-avatar

--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -24,7 +24,7 @@
     height: @ak-avatar-size-large;
     width: @ak-avatar-size-large;
   }
-  &.xlarge {
+  &.xxlarge {
     height: @ak-avatar-size-xlarge;
     width: @ak-avatar-size-xlarge;
   }
