feat: Updates to styling to match latest designs. Border from red to white.
affects: ak-avatar

FAB-400

- Border from red to transparent.
- Background colour so avatar has shape when not yet downloaded.
- Add support for borderColor override property
- Add stories to show borderColor override
- Tidy up inconsistencies with avatar sizes.
- Split design mockups into its own story.
- Move background variable into shared-variables.less
- Removed xxlarge and xxxlarge sizes, not needed after discussing with Luke.
- Remove design story, we don't want to keep this around.

--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -1,8 +1,9 @@
 @import 'shared-variables.less';
 
 .img {
+  background-color: @ak-avatar-background;
   border-radius: 100%;
-  border: 1px solid red;
+  border: 1px solid transparent;
   height: 100%;
   margin: 0 auto;
   width: 100%;
@@ -24,7 +25,7 @@
     height: @ak-avatar-size-large;
     width: @ak-avatar-size-large;
   }
-  &.xxlarge {
+  &.xlarge {
     height: @ak-avatar-size-xlarge;
     width: @ak-avatar-size-xlarge;
   }
