--- a/packages/ak-avatar/src/shared-variables.less
+++ b/packages/ak-avatar/src/shared-variables.less
@@ -2,10 +2,10 @@
 
 @import '../node_modules/akutil-shared-styles/src/colors.less';
 
-@ak-avatar-size-xxxlarge: 128px;
-@ak-avatar-size-xxlarge: 96px;
 @ak-avatar-size-xlarge: 64px;
 @ak-avatar-size-large: 48px;
 @ak-avatar-size-medium: 32px;
 @ak-avatar-size-small: 24px;
 @ak-avatar-size-xsmall: 16px;
+
+@ak-avatar-background: #F0F2F5;
