fix: Fix leakage of avatar background into the border, rendering transparency useless.
affects: ak-avatar

FAB-400

--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -1,6 +1,7 @@
 @import 'shared-variables.less';
 
 .img {
+  background-clip: padding-box;
   background-color: @ak-avatar-background;
   border-radius: 100%;
   border: 1px solid transparent;
