--- a/packages/ak-layer/src/shadow.less
+++ b/packages/ak-layer/src/shadow.less
@@ -1,1 +1,9 @@
 @import 'shared-variables.less';
+
+ak-layer-impl {
+  position: absolute;
+  // display: block;
+  // width: 200px;
+  // height: 200px;
+  top: -99999vh;
+}
