Create editor-button package.

--- a/packages/editor-toolbar/src/index.less
+++ b/packages/editor-toolbar/src/index.less
@@ -10,7 +10,7 @@
   padding-right: 10px;
 }
 
-editorkit-toolbar-button {
+editor-toolbar-button {
   display: inline-block;
   height: 20px;
   width: 20px;
