--- a/packages/editorkit-dropdown/src/font-select.less
+++ b/packages/editorkit-dropdown/src/font-select.less
@@ -5,17 +5,22 @@
 @activeForegroundColor: white;
 
 .font-select {
-  background: @foregroundColor;
-  color: @activeForegroundColor;
   cursor: pointer;
-  padding: 5px 10px;
+  padding: 5px 20px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
   &.active {
-    background: darken(@activeBackgroundColor, 20%);
-    color: @focusColor;
+    background: @foregroundColor;
+    color: @activeForegroundColor;
   }
   &.hover {
     color: @hoverColor;
   }
+}
+
+ak-layer {
+  overflow: hidden;
+  border-radius: 3px;
 }
 
 .paragraph {
