--- a/packages/pf-mention/src/wc/pf-mention-list-shadow.less
+++ b/packages/pf-mention/src/wc/pf-mention-list-shadow.less
@@ -3,43 +3,42 @@
 @import '../shared-variables.less';
 
 .list {
-  // border: 1px solid #ccc;
-  // box-shadow: 2px 2px 10px #ddd;
   width: 340px;
-  background: white;
-  // border-radius: 4px;
-
   color: #333;
-
-  // max-height: 264px;
-
-  .inner-list {
-    // padding: 0;
-    // margin: 0;
-
-    // border: 1px solid #fff;
-    // border-radius: 3px;
-  }
 }
 
 .empty {
   display: none;
 }
 
-// .scrollable {
-//   overflow-x: hidden;
-//   overflow-y: auto;
-
-//   padding: 0;
-//   margin: 0;
-
-//   border: 1px solid #fff;
-//   border-radius: 3px;
-// }
-
 .scrollable {
+  background: white;
   max-height: 264px;
 
   border: 1px solid #fff;
   border-radius: 3px;
 }
+
+// FIXME: workaround host.less not in shadow dom
+pf-mention-item {
+  display: block;
+
+  &:not([defined]) {
+    display: none;
+  }
+}
+
+pf-scrollable {
+
+  display: block;
+  overflow-x: hidden;
+  overflow-y: auto;
+
+  padding: 0;
+  margin: 0;
+
+  &:not([defined]) {
+    display: none;
+  }
+}
+
