fix: Use bootstrap, and fix initial loading of data.:
affects: pf-mention

FAB-183

- Use bootstrap when no query data.
- Ensure query during init is not lost.
- Change demo behaviour to activate only on focus.

--- a/packages/pf-mention/src/wc/pf-mention-item-shadow.less
+++ b/packages/pf-mention/src/wc/pf-mention-item-shadow.less
@@ -67,3 +67,12 @@ ak-avatar {
   color: #747474;
   font-size: 12px;
 }
+
+// FIXME: workaround host.less not in shadow dom
+ak-avatar {
+  display: inline-block;
+
+  &:not([defined]) {
+    display: none;
+  }
+}
