refactor(skate): use unique name functionality
affects: ak-avatar, ak-inline-dialog, ak-layer, akutil-component-template, pf-mention

When using HMR, Skate now re-registers the element with a new name

--- a/packages/akutil-component-template/src/host.less
+++ b/packages/akutil-component-template/src/host.less
@@ -1,4 +1,4 @@
-// You can use element selectors here (e.g. whatever is exposed in index.register.js)
+// You can use element selectors here (e.g. whatever is exposed in index.js)
 // to style your web component light DOM.
 
 // Anything in here leaks to the rest of the page and nothing in here can affect things within
