--- a/packages/editorkit-dropdown/src/font-select.less
+++ b/packages/editorkit-dropdown/src/font-select.less
@@ -1,3 +1,5 @@
+@backgroundColor: #F0F2F5;
+@fontColor: #42526E;
 @activeBackgroundColor: #42526e;
 @activeFontColor: #fff;
 @hoverBackgroundColor: #E7EAF0;
@@ -5,9 +7,13 @@
 
 .font-select {
   cursor: pointer;
-  padding: 5px 20px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  background: @backgroundColor;
+  color: @fontColor;
+  border: none;
+  border-radius: 3px;
+  padding: 0 10px;
+  font-size: 14px;
+  transition: background 0.1s ease-out, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38);
   &.active {
     background: @activeBackgroundColor;
     color: @activeFontColor;
