feat(component): Adding value prop for ak-badge
affects: ak-badge

--- a/packages/ak-badge/src/shadow.less
+++ b/packages/ak-badge/src/shadow.less
@@ -5,6 +5,8 @@
 // browsers that do not support shadow DOM
 @import 'shared-variables.less';
 
-.my-class-name {
-  color: @ak-example-variable;
+.value {
+  background: @ak-badge-background;
+  border-radius: 1em;
+  color: @ak-badge-color;
 }
