--- a/packages/ak-badge/src/shared-variables.less
+++ b/packages/ak-badge/src/shared-variables.less
@@ -2,4 +2,5 @@
 
 @import '../node_modules/akutil-shared-styles/src/colors.less';
 
-@ak-example-variable: blue;
+@ak-badge-color: @ak-color-white;
+@ak-badge-background: @ak-color-red;
