--- a/packages/editor-button/src/shadow.less
+++ b/packages/editor-button/src/shadow.less
@@ -16,11 +16,11 @@ button {
   color: @inactiveForegroundColor;
   font-size: 17px;
   line-height: 20px;
-  height: 20px;
+  height: 30px;
   margin: 0;
   padding: 0;
-  transition: box-shadow 0.2s cubic-bezier(0.47, 0.03, 0.49, 1.38);
-  width: 20px;
+  transition: background 0.1s ease-out, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38);
+  // width: 20px;
 
   path {
     fill: @inactiveForegroundColor;
