--- a/packages/editorkit-dropdown/src/index.less
+++ b/packages/editorkit-dropdown/src/index.less
@@ -6,3 +6,12 @@
   z-index: 10;
   position: relative;
 }
+
+.dropdown-content {
+  list-style-type: none;
+  margin-top: 5px;
+  padding: 0;
+  border-radius: 3px;
+  box-shadow: 0 3px 0 -4px transparent;
+  overflow: hidden;
+}
