--- a/packages/editorkit-dropdown/src/options.less
+++ b/packages/editorkit-dropdown/src/options.less
@@ -1,7 +1,7 @@
 @backgroundColor: #42526e;
-@fontColor: #fff;
-@hoverBackgroundColor: #DEE1E6;
-@hoverFontColor: #DEE1E6;
+@fontColor: white;
+@hoverBackgroundColor: #091E42;
+@hoverFontColor: white;
 @activeBackgroundColor: #091E42;
 @activeFontColor: white;
 
@@ -27,15 +27,15 @@
 }
 
 .heading1 {
-  font-size: 2.5rem;
-}
-
-.heading2 {
   font-size: 2rem;
 }
 
-.heading3 {
+.heading2 {
   font-size: 1.75rem;
+}
+
+.heading3 {
+  font-size: 1.5rem;
 }
 
 .monospace {
