--- a/packages/editorkit-dropdown/src/options.less
+++ b/packages/editorkit-dropdown/src/options.less
@@ -11,7 +11,7 @@
   width: 100%;
   display: block;
   cursor: pointer;
-  padding: 5px 20px;
+  padding: 5px 70px 5px 10px;
   &.active {
     background: @activeBackgroundColor;
     color: @activeFontColor;
@@ -23,19 +23,28 @@
 }
 
 .paragraph {
-  font-size: 1rem;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 20px;
 }
 
 .heading1 {
-  font-size: 2rem;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 20px;
+  letter-spacing: -0.01em;
 }
 
 .heading2 {
-  font-size: 1.75rem;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 20px;
 }
 
 .heading3 {
-  font-size: 1.5rem;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 20px;
 }
 
 .monospace {
