--- a/packages/ak-button/src/host.less
+++ b/packages/ak-button/src/host.less
@@ -8,11 +8,11 @@
 
 // we define a class here in order to re-use it in the storybook
 // (because in storybook the component name is randomly generated)
-.ak-button,
-ak-button {
+.ak-button {
   display: inline-block;
 
   &:not([defined]) {
     display: none;
   }
+
 }
