--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -6,5 +6,37 @@
 @import 'shared-variables.less';
 
 .my-class-name {
-  color: @ak-example-variable;
+  //color: @ak-example-variable;
+
+  font-family: Arial, sans-serif !important;
+  background: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 3.01px;
+  color: #333;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 14px;
+  line-height: 1.42857143;
+  margin: 0;
+  padding: 4px 10px;
+  text-decoration: none;
+
+  &:hover {
+    background: #e9e9e9;
+    border-color: #999;
+    color: #000;
+  }
+
+  &:active {
+    box-shadow: inset 0 3px 6px 0 rgba(0,0,0,.1);
+    background: #f5f5f5;
+  }
+
+  &.primary {
+    background: #3572b0;
+    border-color: transparent;
+    color: #fff;
+    font-weight: 700;
+    -webkit-font-smoothing: antialiased;
+  }
 }
