--- a/packages/editorkit-dropdown/src/index.less
+++ b/packages/editorkit-dropdown/src/index.less
@@ -9,10 +9,9 @@
 
 .dropdown-content {
   list-style-type: none;
-  margin-top: 3px;
-  margin-bottom: 5px;
+  margin-top: -1px;
   padding: 0;
-  border-radius: 3px;
+  border-radius: 0 3px 3px 3px;
   box-shadow: 0 0 0 0.5px rgba(0,0,0,0.05), 0 3px 10px -4px rgba(0,0,0,0.4);
   overflow: hidden;
 }
