--- a/packages/ak-avatar/src/host.less
+++ b/packages/ak-avatar/src/host.less
@@ -1,7 +1,11 @@
 @import 'shared-variables.less';
 
+/* We add the class selector as well for storybook to
+   be able to match when the tagname is random */
+.ak-avatar,
 ak-avatar {
   display: inline-block;
+  position: relative;
 
   &:not([defined]) {
     display: none;
