--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -39,4 +39,12 @@
     font-weight: 700;
     -webkit-font-smoothing: antialiased;
   }
+
+  &.disabled {
+    background: #f5f5f5;
+    border-color: #ddd;
+    box-shadow: none;
+    color: #999;
+    cursor: default;
+  }
 }
