refactor(): Adding new styles

--- a/packages/ak-button/src/shared-variables.less
+++ b/packages/ak-button/src/shared-variables.less
@@ -2,4 +2,27 @@
 
 @import '../node_modules/akutil-shared-styles/src/colors.less';
 
-@ak-example-variable: blue;
+@base: 10px;
+@base-font: 14px;
+@base-radius: 3px;
+
+@blue50: #BFEBFF;
+@blue100: #23A9FA;
+@blue200: #0091EA;
+@blue300: #0074E0;
+@blue400: #165ECC;
+@blue500: #1251AE;
+
+@n50: #FAFBFC;
+@n70: #B3BAC5;
+@n200: #F0F2F5;
+@n250: #E7EAF0;
+@n30: #DEE1E6;
+@n400: #42526E;
+@n700: #253858;
+@n800: #091E42;
+
+@buttonDefault: fade(@n800, 6%);
+@buttonHover: fade(@n800, 10%);
+@buttonFocus: fade(@blue200, 80%);
+@buttonActive: fade(@blue100, 50%);
