--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -5,46 +5,85 @@
 // browsers that do not support shadow DOM
 @import 'shared-variables.less';
 
-.my-class-name {
+.container {
+  display: inline-block;
+}
+
+ak-button,
+.ak-button {
   //color: @ak-example-variable;
 
-  font-family: Arial, sans-serif !important;
-  background: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 3.01px;
-  color: #333;
-  cursor: pointer;
-  font-family: inherit;
-  font-size: 14px;
-  line-height: 1.42857143;
+  font-family: 'Neue Haas Unica Pro', Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: @base-font;
+
+  box-sizing: border-box;
+  background: @buttonDefault;
+  color: #42526E;
+  border: none;
+  padding: 0;
+  line-height: @base*3;
+  height: @base*3;
+  border-radius: @base-radius;
+  font-size: @base-font;
   margin: 0;
-  padding: 4px 10px;
-  text-decoration: none;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  transition: background 0s ease-out, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38);
+
+  .label {
+    margin: 0 @base;
+    pointer-events: none;
+  }
 
   &:hover {
-    background: #e9e9e9;
-    border-color: #999;
-    color: #000;
+    background: @buttonHover;
+    cursor: pointer;
+    transition: background 0.1s ease-out, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38);
   }
 
   &:active {
-    box-shadow: inset 0 3px 6px 0 rgba(0,0,0,.1);
-    background: #f5f5f5;
+    background: @buttonActive;
+    transition-duration: 0s;
+  }
+
+  &:active,
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
+
+  &:focus {
+    transition-duration: 0s, 0.2s;
+    box-shadow: 0 0 0 2px @buttonFocus;
+  }
+
+  &:focus:active {
+    box-shadow: 0 0 0 0 @buttonFocus;
   }
 
   &.primary {
-    background: #3572b0;
-    border-color: transparent;
-    color: #fff;
-    font-weight: 700;
-    -webkit-font-smoothing: antialiased;
+    background: @blue400;
+    color: #FFF;
+
+    &:hover {
+      background: @blue500;
+    }
+
+    &:active {
+      background: @blue300;
+    }
   }
 
   &.disabled {
-    background: #f5f5f5;
-    border-color: #ddd;
-    box-shadow: none;
-    color: #999;
-    cursor: default;
+    color: @n70;
+
+    &:hover {
+      cursor: default;
+      background: @buttonDefault;
+    }
   }
+
 }
