chore(): code clean up

--- a/packages/ak-button/src/host.less
+++ b/packages/ak-button/src/host.less
@@ -8,7 +8,7 @@
 
 // we define a class here in order to re-use it in the storybook
 // (because in storybook the component name is randomly generated)
-.ak-button {
+ak-button {
   display: inline-block;
 
   &:not([defined]) {
