fix: Add CSS styles for shadow DOM polyfill use-case.
affects: editor-button, editor-icon, editor-toolbar

--- a/packages/editor-button/src/host.less
+++ b/packages/editor-button/src/host.less
@@ -6,6 +6,10 @@ editor-button {
   height: 20px;
   line-height: 20px;
 
+  > _shadow_root_ {
+    display: flex;
+  }
+
   path {
     fill: @editor-inactive-foreground;
   }
