--- a/packages/editor-button/src/shadow.less
+++ b/packages/editor-button/src/shadow.less
@@ -11,6 +11,10 @@
     margin: 0;
     padding: 0;
 
+    > slot {
+      display: flex;
+    }
+
     &:not([disabled]) {
       cursor: pointer;
     }
