--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -26,8 +26,8 @@
 @ak-color-violet: #654982;
 
 /** editor **/
-@editor-inactive-foreground: #42526E;
-@editor-focus: #0091EA;
-@editor-subtle-accent: #DEE1E6;
-@editor-active-background: #42526E;
-@editor-active-foreground: white;
+@ak-editor-inactive-foreground: #42526E;
+@ak-editor-focus: #0091EA;
+@ak-editor-subtle-accent: #DEE1E6;
+@ak-editor-active-background: #42526E;
+@ak-editor-active-foreground: white;
