--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -21,82 +21,55 @@
 
 .img {
   background-clip: padding-box;
-  background-color: @ak-avatar-background;
-  border-radius: 100%;
-  border: 1px solid transparent;
   margin: 0 auto;
   vertical-align: bottom;
+  border-radius: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .outerDiv {
   position: relative;
+  background-color: @ak-avatar-background;
+  border-radius: 100%;
+  border: 1px solid transparent;
+  text-align: center;
 
   &.xsmall {
-    img {
-      height: @ak-avatar-size-xsmall;
-      width: @ak-avatar-size-xsmall;
-    }
+    .sizeMixin(@ak-avatar-size-xsmall);
 
     .presence {
       .presenceMixin(@ak-avatar-size-xsmall);
     }
   }
   &.small {
-    img {
-      height: @ak-avatar-size-small;
-      width: @ak-avatar-size-small;
-    }
+    .sizeMixin(@ak-avatar-size-small);
 
     .presence {
       .presenceMixin(@ak-avatar-size-small);
     }
   }
   &.medium {
-    img {
-      height: @ak-avatar-size-medium;
-      width: @ak-avatar-size-medium;
-    }
+    .sizeMixin(@ak-avatar-size-medium);
 
     .presence {
       .presenceMixin(@ak-avatar-size-medium);
     }
   }
   &.large {
-    img {
-      height: @ak-avatar-size-large;
-      width: @ak-avatar-size-large;
-    }
+    .sizeMixin(@ak-avatar-size-large);
 
     .presence {
       .presenceMixin(@ak-avatar-size-large);
     }
   }
   &.xlarge {
-    img {
-      height: @ak-avatar-size-xlarge;
-      width: @ak-avatar-size-xlarge;
-    }
+    .sizeMixin(@ak-avatar-size-xlarge);
 
     .presence {
       .presenceMixin(@ak-avatar-size-xlarge);
     }
   }
-}
-
-.presenceMixin(@size) {
-  @presence-size: @size * @ak-avatar-presence-img-ratio;
-
-  height: @presence-size;
-  width: @presence-size;
-  // We use top and bottom to center the presence icon
-  top: ~"calc(50% - " @presence-size/2 ~")";
-  left: ~"calc(50% - " @presence-size/2 ~")";
-  // And the margin-left to move the center of the presence icon to the right edge of the avatar
-  margin-left: @size / 2;
-  // We set the transformation-origin to be the center of the avatar
-  transform-origin: -(@size/2-@presence-size/2) @presence-size/2;
-  // Now we can change the rotation to have the presence icon sit anywhere on the edge of the avatar
-  transform: rotate(@ak-avatar-presence-angle);
 }
 
 .presence {
@@ -124,4 +97,27 @@
   &.offline {
     background: @ak-avatar-presence-color-offline;
   }
+}
+
+.presenceMixin(@size) {
+  @presence-size: @size * @ak-avatar-presence-img-ratio;
+
+  height: @presence-size;
+  width: @presence-size;
+  // We use top and bottom to center the presence icon
+  top: ~"calc(50% - " @presence-size/2 ~")";
+  left: ~"calc(50% - " @presence-size/2 ~")";
+  // And the margin-left to move the center of the presence icon to the right edge of the avatar
+  margin-left: @size / 2;
+  // We set the transformation-origin to be the center of the avatar
+  transform-origin: -(@size/2-@presence-size/2) @presence-size/2;
+  // Now we can change the rotation to have the presence icon sit anywhere on the edge of the avatar
+  transform: rotate(@ak-avatar-presence-angle);
+}
+
+.sizeMixin(@size) {
+  height: @size;
+  width: @size;
+  line-height: @size;
+  font-size: @size * 0.46;
 }
