--- a/packages/ak-avatar/stories/stories.less
+++ b/packages/ak-avatar/stories/stories.less
@@ -4,3 +4,23 @@
   margin-left: 5px;
   margin-top: 17px;
 }
+
+/* .row, .col and .header are used to make a multi-column layout with headings */
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: top;
+  justify-content: center;
+}
+
+.col {
+  border: 1px solid #cecece;
+  flex: 1 0 0;
+  margin: 10px;
+  padding: 10px;
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 10px;
+}
