feat(dropdown): add ak-editor-dropdown

--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -31,3 +31,4 @@
 @ak-editor-subtle-accent: #DEE1E6;
 @ak-editor-active-background: #42526E;
 @ak-editor-active-foreground: white;
+@ak-editor-dropdown-active-background: #091E42;
