--- a/packages/ak-page/src/shadow.less
+++ b/packages/ak-page/src/shadow.less
@@ -5,6 +5,22 @@
 // browsers that do not support shadow DOM
 @import 'shared-variables.less';
 
-.my-class-name {
-  color: @ak-example-variable;
+.navigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.main {
+  margin-left: 80px;
+  transition: margin-left 200ms;
+
+  .navigation-open & {
+    margin-left: 300px;
+  }
+
+  .main-fixed {
+    max-width: 60vw;
+    margin: auto;
+  }
 }
