feat(component): Spike initial ak-tabs functionality
affects: ak-tabs

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -5,6 +5,10 @@
 // browsers that do not support shadow DOM
 @import 'shared-variables.less';
 
-.my-class-name {
-  color: @ak-example-variable;
+.ak-tab-label + .ak-tab-label {
+  margin-left: 15px;
+}
+
+.ak-tab-label-selected {
+  background-color: red;
 }
