fix(linkButton): component and color

--- a/packages/ak-editor-hyperlink-popup/src/shadow.less
+++ b/packages/ak-editor-hyperlink-popup/src/shadow.less
@@ -1,7 +1,7 @@
 @import 'shared-variables.less';
 
 .hyperlink-popup {
-  background: @ak-color-blue;
+  background: @ak-editor-active-background;
   border-radius: @ak-inline-dialog-border-radius;
   box-shadow: @ak-inline-dialog-box-shadow;
   padding: @ak-inline-dialog-content-padding;
@@ -19,7 +19,7 @@
     border-style: solid;
     border-width: 0 @height @height @height;
     top: -@height;
-    border-color: transparent transparent @ak-color-blue transparent;
+    border-color: transparent transparent @ak-editor-active-background transparent;
     display: block;
     content: '';
     position: absolute;
