feat(component): Spike tab styles
affects: ak-tabs

--- a/packages/ak-tabs/src/children/tab-host.less
+++ b/packages/ak-tabs/src/children/tab-host.less
@@ -1,7 +1,7 @@
 @import '../shared-variables.less';
 
 ak-tab {
-  display: inline-block;
+  display: block;
 
   &:not([defined]),
   &:not([selected]) {
