--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -32,3 +32,4 @@
 @ak-editor-active-background: #42526E;
 @ak-editor-active-foreground: white;
 @ak-editor-dropdown-active-background: #091E42;
+@ak-editor-hyperlink-popup-background: #253858;
