feat(component): Add aria attributes and tabindex for accessibility
affects: ak-tabs

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -8,16 +8,22 @@
 .ak-tab-labels {
   display: flex;
   flex-wrap: wrap;
+  list-style-type: none;
+  padding: 0;
   position: relative;
 }
 
 .ak-tab-label {
-  line-height: 20px;
-  font-size: 14px;
   color: #253858;
-  text-decoration: none;
-  position: relative;
+  font-size: 14px;
+  line-height: 20px;
   padding: @ak-tabs-padding;
+  position: relative;
+}
+
+.ak-tab-label > a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .ak-tab-label::before,
