refactor(component): tweak icons visual presentation
affects: ak-icon, ak-navigation

--- a/packages/ak-navigation/src/ak-navigation-link.less
+++ b/packages/ak-navigation/src/ak-navigation-link.less
@@ -9,6 +9,19 @@
   display: block;
 }
 
+.icon {
+  position: relative;
+  margin-left: 10px;
+  margin-right: 20px;
+  display: inline-block;
+}
+
+.text {
+  line-height: 30px;
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+
 .selected {
   color: @ak-navigation-selected-link-color;
 }
